added ml heroes images

--- a/heroes.html
+++ b/heroes.html
@@ -1,10 +1,270 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title>Mobile Legends Heroes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="heroes.css">
   </head>
   <body>
-    HEROES!
+    <div id="mlimages">
+    <table class="imagesbuttons">
+        <tbody>
+          <tr>
+            <td><img id="ml" src="mlheroes/akai.jpg"></td>
+            <td><img id="ml" src="mlheroes/aldous1.jpg"></td>
+            <td><img id="ml" src="mlheroes/alice.jpg"></td>
+            <td><img id="ml" src="mlheroes/alpha.jpg"></td>
+            <td><img id="ml" src="mlheroes/alucard.jpg"></td>
+            <td><img id="ml" src="mlheroes/angela.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Akai</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Aldous</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Alice</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Alpha</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Alucard</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Angela</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/argus.jpg"></td>
+            <td><img id="ml" src="mlheroes/aurora.jpg"></td>
+            <td><img id="ml" src="mlheroes/badang.jpg"></td>
+            <td><img id="ml" src="mlheroes/balmond.jpg"></td>
+            <td><img id="ml" src="mlheroes/bane.jpg"></td>
+            <td><img id="ml" src="mlheroes/baxia.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Argus</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Aurora</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Badang</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Balmond</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Bane</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Baxia</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/belerick.jpg"></td>
+            <td><img id="ml" src="mlheroes/bruno.jpg"></td>
+            <td><img id="ml" src="mlheroes/carmilla1.jpg"></td>
+            <td><img id="ml" src="mlheroes/chang-e.jpg"></td>
+            <td><img id="ml" src="mlheroes/chou.jpg"></td>
+            <td><img id="ml" src="mlheroes/claude.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Belerick</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Bruno</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Carmilla</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Chang-e</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Chou</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Claude</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/Clint.jpg"></td>
+            <td><img id="ml" src="mlheroes/Cyclops.jpg"></td>
+            <td><img id="ml" src="mlheroes/Diggie.jpg"></td>
+            <td><img id="ml" src="mlheroes/Dyrroth.jpg"></td>
+            <td><img id="ml" src="mlheroes/Esmeralda.jpg"></td>
+            <td><img id="ml" src="mlheroes/Estes.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Clint</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Cyclops</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Diggie</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Dyrroth</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Esmeralda</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Estes</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/Eudora.jpg"></td>
+            <td><img id="ml" src="mlheroes/Fanny.jpg"></td>
+            <td><img id="ml" src="mlheroes/Faramis.jpg"></td>
+            <td><img id="ml" src="mlheroes/Franco.jpg"></td>
+            <td><img id="ml" src="mlheroes/Freya.jpg"></td>
+            <td><img id="ml" src="mlheroes/Gatotkaca.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Eudora</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Fanny</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Faramis</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Franco</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Freya</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Gatotkaca</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/Gord.jpg"></td>
+            <td><img id="ml" src="mlheroes/Granger.jpg"></td>
+            <td><img id="ml" src="mlheroes/Grock.jpg"></td>
+            <td><img id="ml" src="mlheroes/Guinevere.jpg"></td>
+            <td><img id="ml" src="mlheroes/Gusion.jpg"></td>
+            <td><img id="ml" src="mlheroes/Hanabi.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Gord</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Granger</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Grock</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Guinevere</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Gusion</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Hanabi</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/Hanzo.jpg"></td>
+            <td><img id="ml" src="mlheroes/Harith.jpg"></td>
+            <td><img id="ml" src="mlheroes/Harley.jpg"></td>
+            <td><img id="ml" src="mlheroes/Hayabusa.jpg"></td>
+            <td><img id="ml" src="mlheroes/Helcurt.jpg"></td>
+            <td><img id="ml" src="mlheroes/Hilda.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Hanzo</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Harith</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Harley</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Hayabusa</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Helcurt</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Hilda</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/Hylos.jpg"></td>
+            <td><img id="ml" src="mlheroes/Irithel.jpg"></td>
+            <td><img id="ml" src="mlheroes/Jawhead.jpg"></td>
+            <td><img id="ml" src="mlheroes/Johnson.jpg"></td>
+            <td><img id="ml" src="mlheroes/Kadita.jpg"></td>
+            <td><img id="ml" src="mlheroes/Kagura.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Hylos</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Irithel</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Jawhead</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Johnson</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Kadita</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Kagura</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/kaja.jpg"></td>
+            <td><img id="ml" src="mlheroes/karina.jpg"></td>
+            <td><img id="ml" src="mlheroes/karrie.jpg"></td>
+            <td><img id="ml" src="mlheroes/khufra.jpg"></td>
+            <td><img id="ml" src="mlheroes/kimmy.jpg"></td>
+            <td><img id="ml" src="mlheroes/lancelot.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Kaja</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Karina</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Karrie</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Khufra</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Kimmy</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Lancelot</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/lapu-lapu.jpg"></td>
+            <td><img id="ml" src="mlheroes/layla.jpg"></td>
+            <td><img id="ml" src="mlheroes/leomord.jpg"></td>
+            <td><img id="ml" src="mlheroes/lesley.jpg"></td>
+            <td><img id="ml" src="mlheroes/ling.jpg"></td>
+            <td><img id="ml" src="mlheroes/lolita.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">LapuLapu</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Layla</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Leomord</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Lesley</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Ling</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Lolita</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/lunox.jpg"></td>
+            <td><img id="ml" src="mlheroes/lylia.jpg"></td>
+            <td><img id="ml" src="mlheroes/martis.jpg"></td>
+            <td><img id="ml" src="mlheroes/masha.jpg"></td>
+            <td><img id="ml" src="mlheroes/minotaur.jpg"></td>
+            <td><img id="ml" src="mlheroes/minsitthar.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Lunox</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Lylia</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Martis</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Masha</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Minotaur</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Minsitthar</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/miya.jpg"></td>
+            <td><img id="ml" src="mlheroes/moskov.jpg"></td>
+            <td><img id="ml" src="mlheroes/nana.jpg"></td>
+            <td><img id="ml" src="mlheroes/natalia.jpg"></td>
+            <td><img id="ml" src="mlheroes/odette.jpg"></td>
+            <td><img id="ml" src="mlheroes/pharsa.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Miya</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Moskov</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Nana</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Natalia</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Odette</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Pharsa</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/rafaela.jpg"></td>
+            <td><img id="ml" src="mlheroes/roger.jpg"></td>
+            <td><img id="ml" src="mlheroes/ruby.jpg"></td>
+            <td><img id="ml" src="mlheroes/saber.jpg"></td>
+            <td><img id="ml" src="mlheroes/selena.jpg"></td>
+            <td><img id="ml" src="mlheroes/silvana.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Rafaela</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Roger</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Ruby</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Saber</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Selana</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Silvana</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/valir.jpg"></td>
+            <td><img id="ml" src="mlheroes/vexana.jpg"></td>
+            <td><img id="ml" src="mlheroes/wanwan.jpg"></td>
+            <td><img id="ml" src="mlheroes/xborg.jpg"></td>
+            <td><img id="ml" src="mlheroes/yi-sun-shin.jpg"></td>
+            <td><img id="ml" src="mlheroes/zhask.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Valir</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Vexana</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Wanwan</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Xborg</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">YiSunShin</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Zhask</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/zilong.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Zilong</button></a></td>
+          </tr>
+    </div>
+        </tbody>
+    </table>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <script>
+    //Get the button
+    var mybutton = document.getElementById("myBtn");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+    } else {
+    mybutton.style.display = "none";
+    }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+    }
+    </script>
+    <footer>Copyright © 2020 GM B0OM. All rights reserved.| Terms of Use | Privacy Policy</br>0926-7770-093</footer>
   </body>
 </html>
