updated ml heroes images

--- a/heroes.html
+++ b/heroes.html
@@ -12,7 +12,7 @@
         <tbody>
           <tr>
             <td><img id="ml" src="mlheroes/akai.jpg"></td>
-            <td><img id="ml" src="mlheroes/aldous1.jpg"></td>
+            <td><img id="ml" src="mlheroes/aldous.jpg"></td>
             <td><img id="ml" src="mlheroes/alice.jpg"></td>
             <td><img id="ml" src="mlheroes/alpha.jpg"></td>
             <td><img id="ml" src="mlheroes/alucard.jpg"></td>
@@ -45,10 +45,10 @@
           <tr>
             <td><img id="ml" src="mlheroes/belerick.jpg"></td>
             <td><img id="ml" src="mlheroes/bruno.jpg"></td>
-            <td><img id="ml" src="mlheroes/carmilla1.jpg"></td>
+            <td><img id="ml" src="mlheroes/carmilla.jpg"></td>
             <td><img id="ml" src="mlheroes/chang-e.jpg"></td>
             <td><img id="ml" src="mlheroes/chou.jpg"></td>
-            <td><img id="ml" src="mlheroes/claude.jpg"></td>
+            <td><img id="ml" src="mlheroes/claude.png"></td>
           </tr>
           <tr class="mlbutton">
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Belerick</button></a></td>
@@ -155,7 +155,7 @@
             <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Lancelot</button></a></td>
           </tr>
           <tr>
-            <td><img id="ml" src="mlheroes/lapu-lapu.jpg"></td>
+            <td><img id="ml" src="mlheroes/lapulapu.jpg"></td>
             <td><img id="ml" src="mlheroes/layla.jpg"></td>
             <td><img id="ml" src="mlheroes/leomord.jpg"></td>
             <td><img id="ml" src="mlheroes/lesley.jpg"></td>
@@ -217,6 +217,22 @@
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Saber</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Selana</button></a></td>
             <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Silvana</button></a></td>
+          </tr>
+          <tr>
+            <td><img id="ml" src="mlheroes/sun.jpg"></td>
+            <td><img id="ml" src="mlheroes/terizla.jpg"></td>
+            <td><img id="ml" src="mlheroes/thamuz.jpg"></td>
+            <td><img id="ml" src="mlheroes/tigreal.jpg"></td>
+            <td><img id="ml" src="mlheroes/uranus.jpg"></td>
+            <td><img id="ml" src="mlheroes/vale.jpg"></td>
+          </tr>
+          <tr class="mlbutton">
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Sun</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Terizla</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Thamuz</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Tigreal</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Uranus</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Vale</button></a></td>
           </tr>
           <tr>
             <td><img id="ml" src="mlheroes/valir.jpg"></td>
