added new hero popol kupa

--- a/heroes.html
+++ b/heroes.html
@@ -203,57 +203,59 @@
             <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Pharsa</button></a></td>
           </tr>
           <tr>
+            <td><img id="ml" src="mlheroes/popolkupa.jpg"></td>
             <td><img id="ml" src="mlheroes/rafaela.jpg"></td>
             <td><img id="ml" src="mlheroes/roger.jpg"></td>
             <td><img id="ml" src="mlheroes/ruby.jpg"></td>
             <td><img id="ml" src="mlheroes/saber.jpg"></td>
             <td><img id="ml" src="mlheroes/selena.jpg"></td>
-            <td><img id="ml" src="mlheroes/silvana.jpg"></td>
           </tr>
           <tr class="mlbutton">
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">PopolKupa</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Rafaela</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Roger</button></a></td>
             <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Ruby</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Saber</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Selana</button></a></td>
-            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Silvana</button></a></td>
           </tr>
           <tr>
+            <td><img id="ml" src="mlheroes/silvana.jpg"></td>
             <td><img id="ml" src="mlheroes/sun.jpg"></td>
             <td><img id="ml" src="mlheroes/terizla.jpg"></td>
             <td><img id="ml" src="mlheroes/thamuz.jpg"></td>
             <td><img id="ml" src="mlheroes/tigreal.jpg"></td>
             <td><img id="ml" src="mlheroes/uranus.jpg"></td>
-            <td><img id="ml" src="mlheroes/vale.jpg"></td>
           </tr>
           <tr class="mlbutton">
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Silvana</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Sun</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Terizla</button></a></td>
             <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Thamuz</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Tigreal</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Uranus</button></a></td>
-            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Vale</button></a></td>
           </tr>
           <tr>
+            <td><img id="ml" src="mlheroes/vale.jpg"></td>
             <td><img id="ml" src="mlheroes/valir.jpg"></td>
             <td><img id="ml" src="mlheroes/vexana.jpg"></td>
             <td><img id="ml" src="mlheroes/wanwan.jpg"></td>
             <td><img id="ml" src="mlheroes/xborg.jpg"></td>
             <td><img id="ml" src="mlheroes/yi-sun-shin.jpg"></td>
-            <td><img id="ml" src="mlheroes/zhask.jpg"></td>
           </tr>
           <tr class="mlbutton">
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Vale</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Valir</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Vexana</button></a></td>
             <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Wanwan</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Xborg</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">YiSunShin</button></a></td>
-            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Zhask</button></a></td>
           </tr>
           <tr>
+            <td><img id="ml" src="mlheroes/zhask.jpg"></td>
             <td><img id="ml" src="mlheroes/zilong.jpg"></td>
           </tr>
           <tr class="mlbutton">
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Zhask</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Zilong</button></a></td>
           </tr>
     </div>
