--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
     </div>
     <div class"navb">
     <nav class="navbar navbar-dark bg-dark justify-content-between">
-      <a class="navbar-brand"><button onclick="window.open('index1.html')" class="navbtn">Home</button></a>
+      <a class="navbar-brand"><button onclick="#" class="navbtn">Home</button></a>
       <a class="navbar-brand"><button onclick="window.open('heroes.html')" class="navbtn">Heroes</button></a>
       <a class="navbar-brand"><button onclick="window.open('artworks.html')"class="navbtn">Artworks</button></a>
       <form class="form-inline">
@@ -114,7 +114,7 @@
             <td><img id="ml" src="estesskills/estes1.jpg" height="500" width="350"></td>
             <td><img id="ml" src="angelaskills/angela1.jpg" height="500" width="350"></td>
             <td><img id="ml" src="lolitaskills/lolita1.jpg" height="500" width="350"></td>
-          </tr>  
+          </tr>
     </div>
           <tr class="mlbutton">
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Estes</button></a></td>
