updated jpgs names

--- a/heroes.html
+++ b/heroes.html
@@ -61,12 +61,12 @@
               <td><a onclick="window.open('lolita.html')"><button type="button" >Claude</button></a></td>
             </tr>
           <tr>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Clint.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Cyclops.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Diggie.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Dyrroth.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Esmeralda.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Estes.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/clint.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/cyclops.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/diggie.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/dyrroth.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/esmeralda.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/estes.jpg"></td>
           </tr>
           <tr>
             <td><a onclick="window.open('estes.html')"><button type="button">Clint</button></a></td>
@@ -77,12 +77,12 @@
             <td><a onclick="window.open('lolita.html')"><button type="button">Estes</button></a></td>
           </tr>
           <tr>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Eudora.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Fanny.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Faramis.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Franco.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Freya.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Gatotkaca.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/eudora.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/fanny.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/faramis.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/franco.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/freya.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/gatotkaca.jpg"></td>
           </tr>
           <tr>
             <td><a onclick="window.open('estes.html')"><button type="button">Eudora</button></a></td>
@@ -93,12 +93,12 @@
             <td><a onclick="window.open('lolita.html')"><button type="button">Gatotkaca</button></a></td>
           </tr>
           <tr>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Gord.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Granger.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Grock.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Guinevere.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Gusion.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Hanabi.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/gord.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/granger.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/grock.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/guinevere.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/gusion.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/hanabi.jpg"></td>
           </tr>
           <tr>
             <td><a onclick="window.open('estes.html')"><button type="button">Gord</button></a></td>
@@ -109,12 +109,12 @@
             <td><a onclick="window.open('lolita.html')"><button type="button">Hanabi</button></a></td>
           </tr>
           <tr>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Hanzo.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Harith.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Harley.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Hayabusa.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Helcurt.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Hilda.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/hanzo.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/harith.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/harley.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/hayabusa.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/helcurt.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/hilda.jpg"></td>
           </tr>
           <tr>
             <td><a onclick="window.open('estes.html')"><button type="button">Hanzo</button></a></td>
@@ -125,12 +125,12 @@
             <td><a onclick="window.open('lolita.html')"><button type="button">Hilda</button></a></td>
           </tr>
           <tr>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Hylos.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Irithel.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Jawhead.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Johnson.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Kadita.jpg"></td>
-            <td><img class="img-fluid" style="width:100%" src="mlheroes/Kagura.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/hylos.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/irithel.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/jawhead.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/johnson.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/kadita.jpg"></td>
+            <td><img class="img-fluid" style="width:100%" src="mlheroes/kagura.jpg"></td>
           </tr>
           <tr>
             <td><a onclick="window.open('estes.html')"><button type="button">Hylos</button></a></td>
