added nav bar plus drop down in heroes html

--- a/heroes.html
+++ b/heroes.html
@@ -10,6 +10,28 @@
     <div>
       <img src="MLbanner.jpg" alt="MLBANNER" style="width:100%">
     </div>
+    <div class"navb">
+    <nav class="navbar navbar-dark bg-dark justify-content-between">
+      <a class="navbar-brand"><button onclick="heroes.html" class="navbtn">Home</button></a>
+      <div class="dropdown">
+      <a href="#" class="navbar-brand"><button class="navbtn">Heroes</button></a>
+      <div class="dropdown-content">
+          <a href="marksman.html">Marksman</a>
+          <a href="#">Fighter</a>
+          <a href="#">Tank</a>
+          <a href="#">Assassin</a>
+          <a href="#">Mage</a>
+          <a href="#">Support</a>
+      </div>
+      </div>
+      <a class="navbar-brand"><button onclick="window.open('artworks.html')">Artworks</button></a>
+      <a class="navbar-brand"><button onclick="window.open('artworks.html')">Artworks</button></a>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </nav>
+    </div>
     <div class="mlimages">
     <table>
           <tr>
