--- a/heroes.html
+++ b/heroes.html
@@ -43,12 +43,46 @@
             <td><img class="img-fluid" style="width:100%" src="mlheroes/angela.jpg"></td>
           </tr>
           <tr>
-            <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Akai</button></a></td>
+            <td><a ><button type="button" id="btnhover">Akai</button></a></td>
+            <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img src="mlheroes/akai.jpg" alt="Akai">
+            </div>
+            </div>
             <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Aldous</button></a></td>
             <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Alice</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Alpha</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Alucard</button></a></td>
             <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Angela</button></a></td>
+            <script>
+            // Get the modal
+            var modal = document.getElementById("myModal");
+
+            // Get the button that opens the modal
+            var btn = document.getElementById("btnhover");
+
+            // Get the <span> element that closes the modal
+            var span = document.getElementsByClassName("close")[0];
+
+            // When the user clicks the button, open the modal
+            btn.onclick = function() {
+              modal.style.display = "block";
+            }
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {
+              modal.style.display = "none";
+            }
+
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {
+              if (event.target == modal) {
+                modal.style.display = "none";
+              }
+            }
+            </script>
           </tr>
             <tr>
               <td><img class="img-fluid" style="width:100%" src="mlheroes/argus.jpg"></td>
