added fighter and tank html css

--- a/heroes.html
+++ b/heroes.html
@@ -17,11 +17,11 @@
       <a href="#" class="navbar-brand"><button class="navbtn">All Heroes</button></a>
       <div class="dropdown-content">
           <a href="marksman.html">Marksman</a>
-          <a href="#">Fighter</a>
-          <a href="#">Tank</a>
-          <a href="#">Assassin</a>
-          <a href="#">Mage</a>
-          <a href="#">Support</a>
+          <a href="fighter.html">Fighter</a>
+          <a href="tank.html">Tank</a>
+          <a href="assassin.html">Assassin</a>
+          <a href="mage.html">Mage</a>
+          <a href="support.html">Support</a>
       </div>
       </div>
       <a class="navbar-brand"><button class="navbtn">Items</button></a>
@@ -221,7 +221,7 @@
             <td><img class="img-fluid" style="width:100%" src="mlheroes/lolita.jpg"></td>
           </tr>
           <tr>
-            <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">LapuLapu</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Lapu Lapu</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Layla</button></a></td>
             <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Leomord</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Lesley</button></a></td>
