--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
     </div>
     <div class"navb">
     <nav class="navbar navbar-dark bg-dark justify-content-between">
-      <a class="navbar-brand"><button onclick="#" class="navbtn">Home</button></a>
+      <a class="navbar-brand"><button onclick="index1.html" class="navbtn">Home</button></a>
       <a class="navbar-brand"><button onclick="window.open('heroes.html')" class="navbtn">Heroes</button></a>
       <a class="navbar-brand"><button onclick="window.open('artworks.html')"class="navbtn">Artworks</button></a>
       <form class="form-inline">
