added assassin mage support html and css

--- a/heroes.html
+++ b/heroes.html
@@ -112,7 +112,7 @@
               <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Belerick</button></a></td>
               <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Bruno</button></a></td>
               <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Carmilla</button></a></td>
-              <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Chang-e</button></a></td>
+              <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Chang'e</button></a></td>
               <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Chou</button></a></td>
               <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Claude</button></a></td>
             </tr>
