--- a/heroes.html
+++ b/heroes.html
@@ -48,7 +48,7 @@
             <!-- Modal content -->
             <div class="modal-content">
               <span class="close">&times;</span>
-              <img src="mlheroes/akai.jpg" alt="Akai">
+              <img src="psskills/akaiskills.jpg" alt="Akai">
             </div>
             </div>
             <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Aldous</button></a></td>
